# moneta-agents

./: .gitignore  CHANGELOG.md  README.md  azure.yaml  pyproject.toml
backend/: .env.sample  TestingSK-2.ipynb  TestingSK.ipynb  pyproject.toml  readme.md  requirements.txt  sample.env
backend/gbb/: handler.py
backend/sk/: sk_handler.py
frontend/: rm_app.py
infra/: main.bicep  main.parameters.json
infra/modules/: role.bicep
infra/modules/ai/: project.bicep
scripts/: auth_init.py  auth_update.py  data_indexing.py  data_upload.py  postdeploy.ps1  postdeploy.sh  postprovision.sh  preprovision.sh  requirements.in  requirements.in.original  requirements.txt
scripts/data_load/: data_indexing.py  data_upload.py  data_upload_customer_profiles.py  setup_aisearch.py
src/backend/: .env.sample  Dockerfile  app.py  crm_store.py  deep.ipynb  function_app.py  pyproject.toml  readme.md  requirements.txt  sample.env  tracing.py  util.py
src/backend/bruno/: curl_call.sh
src/backend/foundry/: handler.py
src/backend/foundry/agents/: agent_management.py  tool_schema_utils.py
src/backend/foundry/agents/banking/cio/: README.md  cio_agent.py  cio_functions.py  sample_investment_data.json
src/backend/foundry/agents/banking/crm/: README.md  __init__.py  client_sample.json  crm_agent.py  crm_functions.py
src/backend/foundry/agents/banking/crm/evaluation/: crm_evaluation_data.jsonl  evaluate_crm_agent.py
src/backend/foundry/agents/banking/funds/: README.md  funds_agent.py  funds_functions.py  sample_funds_data.json
src/backend/foundry/agents/banking/news/: README.md  __init__.py  news_agent.py  news_functions.py
src/backend/foundry/agents/insurance/: README.md  __init__.py  policies_functions.py
src/backend/foundry/agents/insurance/crm/: README.md  __init__.py  crm_insurance_agent.py  crm_insurance_functions.py
src/backend/foundry/agents/insurance/policies/: README.md  __init__.py  policies_agent.py  policies_functions.py
src/backend/foundry/orchestrators/: custom_span_processor.py  deep_research_orchestrator.py  foundry_banking_orchestrator.py  foundry_insurance_orchestrator.py  open_ai_banking_orchestrator.py  open_ai_insurance_orchestrator.py
src/backend/gbb/: handler.py
src/backend/gbb/agents/fsi_banking/: cio_agent.py  config.py  crm_agent.py  group_chat.py  news_agent.py  product_agent.py
src/backend/gbb/agents/fsi_insurance/: config.py  crm_agent.py  group_chat.py  product_agent.py
src/backend/notebooks/: Testing-sk.ipynb
src/backend/o1_assistants_api/: handler.py
src/backend/o1_assistants_api/banking/: banking_orchestrator.py  banking_tools.py
src/backend/sk/: handler.py
src/backend/sk/aifoundry/: agent_initialiazer.py  azure_ai_agent_service.py  open_ai_assistant_channel.py  openai_ai_assistant_base.py
src/backend/sk/orchestrators/: banking.py  insurance.py  semantic_orchestrator.py
src/backend/sk/skills/: cio_facade.py  crm_facade.py  funds_facade.py  news_facade.py  product_facade.py
src/frontend/: Dockerfile  app.py  config.py  requirements.txt  sample.env
src/frontend-next/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
(+17 files in other folders)
