[project]
name = "sk-experiment"
version = "0.1.0"
description = "description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cosmos>=4.9.0",
    "azure-functions>=1.21.3",
    "azure-identity>=1.19.0",
    "azure-search-documents>=11.5.2",
    "grpcio-tools>=1.68.1",
    "lxml-html-clean>=0.4.1",
    "openai>=1.56.2",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "requests-html>=0.10.0",
    "semantic-kernel>=1.16.0",
    "starlette-gzip-request>=0.1.0",
    "yfinance>=0.2.50",
    "ipykernel>=6.29.5",
    "pyyaml>=6.0.2",
]