[project]
name = "moneta-backend"
version = "0.1.0"
description = "Backend propject steup for Moneta"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    # Agent framework - core and Azure AI packages
    "agent-framework>=1.0.0b260116",
    "agent-framework-azure-ai>=1.0.0b260116",
    "agent-framework-azure-ai-search>=1.0.0b260116",  # Override broken 0.0.0a1 from [all] extra
    "azure-ai-agents>=1.2.0b5",

    # Azure dependencies
    "azure-identity>=1.21.0",
    "azure-ai-inference>=1.0.0b9",
    "azure-ai-projects>=2.0.0b3",
    "python-dotenv>=1.0.1",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-cosmos>=4.9.0",

    # Search integration
    "azure-search-documents>=11.6.0",

    # MCP support
    "mcp>=1.11.0",

    # News agent dependencies
    "requests-html>=0.10.0",
    "pandas>=2.2.3",

    # Tracing and observability
    "azure-monitor-opentelemetry-exporter>=1.0.0b34",
    "opentelemetry-sdk>=1.29.0",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "opentelemetry-exporter-otlp>=1.29.0",

    # Other dependencies
    "requests>=2.32.4",
    "pyyaml>=6.0.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "lxml-html-clean>=0.4.1",
    "feedparser>=6.0.11",
    
    # Security updates (transitive dependency fixes)
    "aiohttp>=3.12.14",
    "protobuf>=5.29.5",
    "starlette>=0.49.1",
    "urllib3>=2.6.0",
    "werkzeug>=3.1.4"
]
[tool.uv]
prerelease = "allow"